@@ -104,6 +104,11 @@ extern "C" {
 
 #define APLOG_NOERRNO		(APLOG_LEVELMASK + 1)
 
+/* Use APLOG_TOCLIENT to cause ap_log_rerror() to send the message
+ * to the client in addition to recording it to the error log.
+ */
+#define APLOG_TOCLIENT          (APLOG_LEVELMASK + 2)
+
 /* normal but significant condition on startup, usually printed to stderr */
 #define APLOG_STARTUP           ((APLOG_LEVELMASK + 1) * 4) 
 
